# p

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: CONTRIBUTING.md  Makefile  README.md  debug.py  pyproject.toml  pyrightconfig.json  requirements.dev.txt  requirements.txt  setup.py
{{cookiecutter.project_slug}}/.etc/: pypi.yml  setup.py
{{cookiecutter.project_slug}}/.github/: copilot-instructions.md
{{cookiecutter.project_slug}}/.github/workflows/: gh-pages.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  logging.py  {{cookiecutter.project_slug}}.py
