# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example
[project]
    authors         = [{ name = "{{ cookiecutter.full_name }}" }]
    dependencies    = ["click>=8.1.7", "loguru>=0.7.2"]
    description     = "{{ cookiecutter.project_short_description }}"
    license         = { file = "LICENSE" }
    name            = "{{ cookiecutter.project_slug }}"
    readme          = "README.md"
    requires-python = ">={{ cookiecutter.python_version }}"
    version         = "0.0.0"
    [project.urls]
        "Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
        Changelog     = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/main/CHANGELOG.md"
        Documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
        Homepage      = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
        Repository    = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}.git"
    [project.optional-dependencies]
        dev = ["pdoc>=14.7.0"]
# https://mypy.readthedocs.io/en/stable/config_file.html#config-file-format
[tool.mypy]
    check_untyped_defs     = true
    disallow_untyped_defs  = true
    ignore_missing_imports = true
    pretty                 = true
    python_version         = "{{ cookiecutter.python_version }}"
    strict_equality        = true
    warn_redundant_casts   = true
    warn_return_any        = true
    warn_unreachable       = true
    warn_unused_ignores    = true
[tool.pyright]
    include = ["{{ cookiecutter.project_slug }}"]
[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "template.py",
        "venv",
    ]
    line-length = 79
    target-version = "py311"
    [tool.ruff.format]
        docstring-code-format      = true
        docstring-code-line-length = "dynamic"
        indent-style               = "space"
        line-ending                = "auto"
        quote-style                = "double"
        skip-magic-trailing-comma  = false
    [tool.ruff.lint]
        # https://flake8.pycqa.org/en/latest/user/error-codes.html
        # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
        # select = ["E4", "E7", "E9", "F"]
        fixable = ["ALL"]
        ignore = [
            "E722", # Do not use bare `except`
            "E731", # Do not assign a `lambda` expression, use a `def`
        ]
